--- a/06.CSSSyntax/LoveLetter/css/styles.css
+++ b/06.CSSSyntax/LoveLetter/css/styles.css
@@ -13,6 +13,7 @@ body {
     background-image: url(img/bg.png);
     background-size: cover;
     font-family: Arial;
+    box-shadow: 0px 0px 10px;
 }
 
 h1 {
@@ -31,6 +32,7 @@ mark {
 
 footer {
     margin-top: 35px;
+    text-align: right;
 }
 span {
     font-size: 30px;
@@ -41,4 +43,10 @@ main p {
     letter-spacing: normal;
     font-size: 24px;
     color: blue;
+}
+main p mark 
+{
+    text-shadow: 5px;
+    background-color: pink;
+    
 }
