--- a/06.CSSSyntax/CssButtons/css/styles.css
+++ b/06.CSSSyntax/CssButtons/css/styles.css
@@ -1,16 +1,63 @@
-.btnGreen
-{
-    background-color: rgb(41, 163, 41);
-    border-radius: 5px;
-    color: white;
-    display: inline-block;
-    font-size: 20px;
-    padding: 10px ;
-    text-decoration: none;
-    text-transform: uppercase;
+/* Réinitialiser les marges et les rembourrages pour éviter les styles par défaut du navigateur */
+body, h1, h2, p {
+    margin: 5px;
+    padding: 0;
 }
+
+/* Appliquer une police de caractères générique à la page */
+body {
+    font-family: Arial, sans-serif;
+}
+
+h2 {
+    margin-bottom: 10px;
+}
+
+/* Styler le titre principal */
+h1 {
+    text-align: center;
+    margin: 20px 0;
+    text-align: left;
+}
+
+/* Styler les boutons */
+.btnGreen {
+    display: inline-block;
+    padding: 10px 30px;
+    background-color: rgb(143, 187, 68);
+    color: white;
+    text-decoration: none;
+    border-radius: 3px;
+    margin-bottom: 10px;
+}
+
 .btnGreen::after
 {
     content: " →";
-    font-size: 20px;
+}
+
+.btnFav {
+    font-size: 30px;
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: rgba(255, 0, 0, 0.2);
+    color: rgb(143, 74, 74);
+    text-decoration: none;
+    border-radius: 50%; /* Pour obtenir un aspect de bouton rond */
+    margin-bottom: 10px;
+}
+
+.btnTiktok {
+    display: inline-flex;
+    padding: 10px 30px;
+    background-color: lightgray;
+    color: black;
+    text-decoration: none;
+    margin-bottom: 10px;
+    align-items: center;
+}
+.btnTiktok img{
+    width: 40px;
+    height: auto;
+    margin-right: 10px;
 }
