--- a/06.CSSSyntax/CssButtons/css/styles.css
+++ b/06.CSSSyntax/CssButtons/css/styles.css
@@ -45,15 +45,40 @@ h1 {
 
 .btnTiktok {
     display: inline-flex;
-    padding: 10px 30px;
+    padding: 15px 30px;
     background-color: lightgray;
     color: black;
-    text-decoration: none;
     margin-bottom: 10px;
-    align-items: center;
+    text-decoration: none;
+}
+.btnTiktok p a{
+    text-decoration: none;
+    color: black;
 }
 .btnTiktok img{
-    width: 40px;
+    width: 30px;
     height: auto;
     margin-right: 10px;
+}
+
+div .btnGreen{
+    transition: 0.5s, 0.5s;
+}
+div .btnGreen:hover{
+    border-radius: 5px;
+    color: white;
+    padding: 20px 40px;
+    font-size: 19px;
+}
+div .btnFav{
+    transition: 0.5s, 0.5s;
+}
+div .btnFav:hover {
+    padding: 15px 25px;
+}
+.btnTiktok{
+    transition: 0.5s 0.5s;
+}
+.btnTiktok:hover{
+    padding: 30px 50px;
 }
