--- a/08.CSSLayout1/DesertTourism/css/styles.css
+++ b/08.CSSLayout1/DesertTourism/css/styles.css
@@ -1,25 +1,114 @@
-body
-{
-    max-width: 960px;
-    margin-left: auto;
-    margin-right: auto;
+/**
+ * Layout styles for Desert Tourism
+ *
+ * @author Hicham Lahmouri
+ *
+ */
+
+/* GENERAL */
+/* ======= */
+
+body{
+    margin: 0 auto;
 }
-header
-{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-nav ul li
-{
-    display: inline-block;
-}
-nav ul li a
-{
-    flex-direction: column;
-    column-gap: 20px;
-}
-#galery ul li img
-{
+
+img {
     max-width: 100%;
 }
+
+/* HEADER */
+/* ====== */
+
+header {
+    display: flex;
+    justify-content: space-between;
+    max-width: 960px;
+    margin: 0 auto;
+    align-items: center;
+}
+
+nav {
+    display: flex;
+}
+
+nav ul {
+    display: flex;
+}
+
+nav ul li {
+    margin: 0 17px;
+}
+
+/* MAIN */
+/* ====== */
+
+#gallery {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    max-width: 960px;
+}
+
+#gallery img {
+    max-width: 100%;
+}
+
+#gallery ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+#gallery ul li {
+    padding: 10px;
+    width: 23%;
+}
+
+/* CONTENT */
+/* ======= */
+
+.left{
+    width: 65%;
+}
+
+.left img{
+    float: left;
+    margin-right: 1rem;
+}
+
+.right {
+    width: 30%;
+}
+
+.right img {
+    float: right;
+    margin-left: 10px;
+}
+
+#content {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    max-width: 960px;
+}
+
+/* DOORMAT */
+/* ======= */
+
+#doormat {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    max-width: 960px;
+}
+
+/* FOOTER */
+/* ======= */
+
+footer {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    max-width: 960px;
+}
+
