--- a/08.CSSLayout1/DesertTourism/css/styles.css
+++ b/08.CSSLayout1/DesertTourism/css/styles.css
@@ -26,7 +26,7 @@ header .wrapper  {
     display: flex;
     justify-content: space-between;
     margin:  auto;
-    margin-top: au;
+    margin-top: auto;
     align-items: center;
 }
 
@@ -114,4 +114,3 @@ footer .wrapper{
     margin: 0 auto;
     max-width: 960px;
 }
-
