--- a/09.CSSLayout2/MyTravelBlog/css/styles.css
+++ b/09.CSSLayout2/MyTravelBlog/css/styles.css
@@ -1,128 +1,112 @@
-*
-{
+* {
     padding: 0px;
     margin: 0px;
 }
 
-body
-{
+body {
     margin-right: auto;
     margin-left: auto;
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
 }
-main .wrapper
-{
+
+main .wrapper {
     display: flex;
     justify-content: space-between;
     column-gap: 25px;
 }
-.wrapper
-{
+
+.wrapper {
     margin: 0 auto;
     max-width: 960px;
 }
 
-header .sm ul
-{
+header .sm ul {
     display: flex;
     list-style: none;
 }
 
-.sm li
-{
+.sm li {
     margin: 10px;
 }
 
-nav
-{
+nav {
     display: flex;
     justify-content: space-between;
 }
 
-nav ul
-{
+nav ul {
     display: flex;
     list-style: none;
     align-items: flex-end;
     margin-bottom: 40px;
 }
 
-nav li a:hover
-{
+nav li a:hover {
     color: #c67188;
 }
 
-nav li
-{
+nav li {
     margin: 10px;
 }
 
-span
-{
+span {
     color: black;
 }
 
-#search
-{
+#search {
     border: none;
     margin-top: 7px;
     height: 25px;
     border-radius: 4px;
 }
-header .social
-{
+
+header .social {
     display: flex;
     justify-content: space-between;
     background-color: #eeeeee;
 }
 
-.social .wrapper 
-{
+.social .wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 0px auto;
 }
 
-.social form
-{
+.social form {
     display: flex;
 }
 
-.banner
-{
+.banner {
     background-image: url(../img/seoul_skyline.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     padding: 100px;
 }
 
-.banner-text
-{
+.banner-text {
     margin-bottom: 50px;
     color: white;
 }
 
-.banner-text a
-{
+.banner-text a {
     text-decoration: none;
     padding: 10px;
     border: 2px solid white;
     color: white;
 }
 
-.social button
-{
+.social button {
     display: none;
 }
-nav a
-{
+
+nav a {
     text-decoration: none;
     color: black;
 }
-.logo
-{
+
+.logo {
     text-decoration: none;
     font-family: 'Dancing Script', cursive;
     font-size: 50px;
@@ -130,60 +114,55 @@ nav a
     margin-top: 40px;
     margin-bottom: 40px;
 }
-.left
-{
+
+.left {
     width: 60%;
 }
-.left img
-{
+
+.left img {
     width: 100%;
 }
-.right
-{
+
+.right {
     width: 40%;
 }
 
-.right img
-{
+.right img {
     width: 50%;
 }
 
-.right .me
-{
+.right .me {
     float: right;
     width: 40%;
 }
 
-.seoul 
-{
+.seoul {
     display: flex;
-    
+
 }
-.seoul img
-{
+
+.seoul img {
     height: 100%;
     margin-top: 20px;
 }
 
-.seoul div
-{
+.seoul div {
     margin: 15px;
 }
 
-.seoul h3
-{
+.seoul h3 {
     white-space: nowrap;
     font-size: 16px;
 }
-.left .articles
-{
+
+.left .articles {
     background-color: #eeeeee;
     margin-right: 100px;
     padding-bottom: 60px;
     margin-top: 20px;
 }
-.read
-{
+
+.read {
     text-decoration: none;
     padding: 10px;
     border: 2px solid black;
@@ -191,62 +170,58 @@ nav a
     float: right;
     margin: 10px;
 }
-.articles ul 
-{
+
+.articles ul {
     display: flex;
     justify-content: center;
     list-style-type: square;
 }
 
-.articles li
-{
+.articles li {
     margin: 10px;
     text-decoration: underline;
 }
 
-strong
-{
+strong {
     font-size: 40px;
     font-weight: lighter;
 }
-.articles li:first-child
-{
+
+.articles li:first-child {
     list-style: none;
     text-decoration: none;
 }
 
-.left h3
-{
+.left h3 {
     text-align: center;
     padding: 20px;
 }
-.right input
-{
+
+.right input {
     margin: 0;
     background-color: #eeeeee;
     border: none;
     border-radius: 3px;
     height: 25px;
 }
-.right form
-{
+
+.right form {
     line-height: 1.5;
 }
-.right textarea
-{
+
+.right textarea {
     margin-top: 10px;
     background-color: #eeeeee;
     border: none;
     border-radius: 5px;
     height: 100px;
 }
-main
-{
+
+main {
     margin-top: 25px;
 }
 
-h2
-{
+h2 {
     border-bottom: 2px solid #c67188;
     white-space: nowrap;
     width: 60px;
@@ -254,8 +229,8 @@ h2
     margin-top: 20px;
     padding-bottom: 10px;
 }
-.right button
-{
+
+.right button {
     padding: 10px;
     color: white;
     background-color: #c67188;
@@ -263,8 +238,8 @@ h2
     width: 200px;
     border-radius: 10px;
 }
-footer .wrapper
-{
+
+footer .wrapper {
     border-top: 2px solid #eeeeee;
     margin-top: 75px;
     margin-bottom: 20px;
@@ -272,4 +247,3 @@ footer .wrapper
     padding-top: 40px;
     justify-content: space-between;
 }
-
