--- a/EP3/css/index.css
+++ b/EP3/css/index.css
@@ -4,6 +4,7 @@ header .menu ul li .accueil{
 }
 
 h1{
+    margin-top: 50px;
     color: #F48202;
     font-family: "Lobster", sans-serif;
     font-size: 40px;
@@ -24,7 +25,7 @@ h1{
 }
 
 .img-container{
-    align-content: center; /* probeer ook flex-start, flex-end... */         
+    align-content: center;         
    display: flex; 
    flex-wrap: wrap; 
    gap: 10px;
@@ -76,9 +77,11 @@ h1{
 }
 
 .articles{
+    align-content: center;
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
     gap: 20px;
+    justify-content: center;
 }
 
 .articles .banners img{
@@ -126,5 +129,140 @@ h1{
 .articles .date{
     text-align: end;
     margin-right: 10px;
+    
+}
+
+.support{
+    display: flex;
+    margin-bottom: 50px;
+    justify-content: space-between;
     font-family: "Lato", sans-serif;
+}
+
+.paypal{
+    padding: 20px;
+    width: 200px;
+}
+
+.sup-p{
+    max-width: 350px;
+}
+
+.support-don{
+    margin-top: 50px;
+    border: 3px solid black;
+}
+
+.payment p, .payment img{
+    border: 3px solid black;
+}
+
+.wp-don{
+    display: block;
+    text-align: center;
+}
+
+.payment{
+    text-align: start;
+    display: inline-block;
+    max-width: 250px;
+}
+
+.pay{
+    padding: 5px;
+}
+
+.pay:first-child{
+    background-color: aqua;
+}
+
+.times ul, .price ul{
+    max-width: 250px;
+    display: inline-flex;
+    list-style: none;
+    border: 3px solid black;
+    
+}
+
+.times ul li, .price ul li{
+    padding: 3px;
+    margin: 10px;
+}
+
+.contact-form {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+textarea {
+    width: 100%;
+    height: 150px;
+    padding: 10px;
+    border: 1px solid #000;
+    border-radius: 4px;
+    resize: none;
+}
+
+input[type="file"] {
+    display: inline-block;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"] {
+    width: calc(100% - 22px);
+    padding: 10px;
+    border: none;
+    border-bottom: 1px solid #F48202;
+    margin-bottom: 10px;
+}
+
+.name-fields {
+    display: flex;
+    justify-content: space-between;
+}
+
+input[type="checkbox"] {
+    margin-right: 10px;
+}
+
+.submit-btn {
+    display: flex;
+    align-items: end;
+    padding: 10px 20px;
+    border: 2px solid black;
+    border-radius: 1px;
+    box-shadow: 2px 3px;
+    cursor: pointer;
+    text-align: center;
+}
+
+.social{
+    display: flex;
+    justify-content: end;
+    font-size: 30px;
+}
+
+.social p a, .social p span{
+    color: #F48202;
+    margin-left: 15px;
+}
+
+@media (min-width: 600px) {
+    .articles{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 20px;
+    }
 }
