--- a/EP3/css/contact.css
+++ b/EP3/css/contact.css
@@ -2,3 +2,131 @@ header .menu ul li .contacte{
     padding: 1px 20px;
     background-color: lightblue;
 }
+
+.support{
+    display: flex;
+    margin-bottom: 50px;
+    justify-content: space-between;
+    font-family: "Lato", sans-serif;
+}
+
+.paypal{
+    padding: 20px;
+    width: 200px;
+}
+
+.sup-p{
+    max-width: 350px;
+}
+
+.support-don{
+    margin-top: 50px;
+    border: 3px solid black;
+}
+
+.payment p, .payment img{
+    border: 3px solid black;
+}
+
+.wp-don{
+    display: block;
+    text-align: center;
+}
+
+.payment{
+    text-align: start;
+    display: inline-block;
+    max-width: 250px;
+}
+
+.pay{
+    padding: 5px;
+}
+
+.pay:first-child{
+    background-color: aqua;
+}
+
+.times ul, .price ul{
+    max-width: 250px;
+    display: inline-flex;
+    list-style: none;
+    border: 3px solid black;
+    
+}
+
+.times ul li, .price ul li{
+    padding: 3px;
+    margin: 10px;
+}
+
+.contact-form {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+textarea {
+    width: 100%;
+    height: 150px;
+    padding: 10px;
+    border: 1px solid #000;
+    border-radius: 4px;
+    resize: none;
+}
+
+input[type="file"] {
+    display: inline-block;
+    padding: 10px;
+    border-bottom: 1px #F48202 solid;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"] {
+    width: calc(100% - 22px);
+    padding: 10px;
+    border: none;
+    border-bottom: 1px solid #F48202;
+    margin-bottom: 10px;
+}
+
+.name-fields {
+    display: flex;
+    justify-content: space-between;
+}
+
+input[type="checkbox"] {
+    margin-right: 10px;
+}
+
+.submit-btn {
+    display: flex;
+    align-items: end;
+    padding: 10px 20px;
+    border: 2px solid black;
+    border-radius: 1px;
+    box-shadow: 2px 3px;
+    cursor: pointer;
+    text-align: center;
+}
+
+.social{
+    display: flex;
+    justify-content: end;
+    font-size: 30px;
+}
+
+.social p a, .social p span{
+    color: #F48202;
+    margin-left: 15px;
+}
