--- a/EP3/css/actualite.css
+++ b/EP3/css/actualite.css
@@ -1,20 +1,78 @@
+* {
+  box-sizing: border-box;
+}
+
 header .menu ul li .actualités{
     padding: 1px 20px;
     background-color: lightblue;
 }
 
+#banner{
+    background-image: url(../img/photo1.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+#banner .wrapper{
+    min-height: 300px;
+}
+
 .text{
     max-width: 800px;
+    font-family: "Lato", sans-serif;
+    font-size: 12px;
 }
 
-.images{
-    align-content: center;
-    flex-wrap: wrap;
+.images {
+    display: grid;
+    max-width: 800px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
     gap: 20px;
-    justify-content: stretch;
-    margin-top: 100px;
 }
 
-.images img{
-    width: 30%;
+.images img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+
+
+.art-sim{
+    border: 3px solid black;
+    max-width: 400px;
+    margin-bottom: 50px;
+}
+
+.art-sim div{
+    display: flex;
+    margin: 20px;
+}
+
+.art-sim div img{
+    height: 100px;
+
+}
+
+.back{
+    border: 2px solid black;
+    display: inline-block;
+    margin: 20px;
+    padding: 5px 30px;
+    font-family: "Lato", sans-serif;
+    text-decoration: none;
+    color: black;
+    box-shadow: 1px 3px;
+}
+
+@media (min-width: 600px){
+    .container{
+    display: flex;
+    justify-content: space-between;
+}
+
+    .text{
+        font-size: 16px;
+    }
 }
