--- a/EP3/css/common.css
+++ b/EP3/css/common.css
@@ -1,5 +1,5 @@
 body{
-    max-width: 1100px;
+    max-width: 1200px;
     margin: auto;
     padding: 20px;
 }
@@ -9,20 +9,12 @@ header .logo
     width: 250px;
 }
 
-header{
-    justify-content: space-between;
-    display: flex;
+header .menu{
+    font-size: 30px;
 }
 
 header .menu ul{
     list-style: none;
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-}
-
-header .menu{
-    font-size: 30px;
 }
 
 header .menu ul li a{
@@ -54,7 +46,7 @@ header .menu-social .search, header .menu-social .social{
 header .menu-social .social p a{
     font-size: 30px;
     color: #F48202;
-    margin-left: 50px;
+    margin-left: 20px;
 }
 
 header .menu-social .search input{
@@ -79,4 +71,21 @@ span{
     margin-top: 10px;
     text-decoration: underline;
     color: blue;
+}
+
+@media (min-width: 400px){
+
+    header .menu ul{
+        list-style: none;
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+    }
+}
+
+@media (min-width: 800px){
+    header{
+        justify-content: space-between;
+        display: flex;
+    }
 }
