--- a/EP3/css/contact.css
+++ b/EP3/css/contact.css
@@ -7,10 +7,6 @@ p{
     max-width: 600px;
 }
 
-.info-contact{
-    display: flex;
-}
-
 .links{
     display: flex;
     justify-content: space-between;
@@ -33,7 +29,6 @@ p{
 }
 
 .support{
-    display: flex;
     margin-bottom: 50px;
     justify-content: space-between;
     font-family: "Lato", sans-serif;
@@ -161,4 +156,14 @@ input[type="checkbox"] {
 
 h1, h3{
     font-family: "Lato", sans-serif;
+}
+
+@media (min-width: 600px){
+    .support{
+        display: flex;
+    }
+
+    .info-contact{
+        display: flex;
+    }    
 }
